2016-02-13  Lukas Kluft <lukas.kluft@gmail.com>

	* doc/cm.rst: Fixed documentation for cm module.

	* typhon/cm/__init__.py:

	Added function mpl_colors which returns a given number of RGB tuples from a
	colormap.

	Included new colormap definitions from _cm.py.

	* typhon/cm/_cm.py:

	Colormap definitions. Currently containing ported versions two ColorBrewer
	palettes.

2016-02-11  Lukas Kluft <lukas.kluft@gmail.com>

	* typhon/cm/__init__.py:

	Colormaps can now be generated through dictionaries containing red, blue and
	green entries (see matplotlib's LinearSegmentedColormap).

2016-02-10  Oliver Lemke  <olemke@core-dump.info>

	* typhon/cm/__init__.py:

	Register colormaps with mpl.

	Use LinearSegmentedColormap to make lut argument in mpl.get_cmap work.

2016-02-09  Lukas Kluft <lukas.kluft@gmail.com>

	* doc/cm.rst: Documentation file for the cm package.

	* doc/modules.rst: Included the cm package.

	* typhon/__init__.py: Import new package cm.

	* typhon/cm: Package to provide matplotlib colormaps.

	* typhon/cm/__init__.py:

	The init file is used to collect the colormap data from all data files
	stored in typhon/cm. It creates and registers the colormaps.

	* typhon/cm/_cmocean.py: Ported colormaps from the cmocean project.

2016-02-08  Lukas Kluft <lukas.kluft@gmail.com>

	* /typhon/arts/griddedfield.py:

	Added classmethod from_nc. This function extracts a given variable from a
	netCDF file and stores it alongside its grids to a GriddedField object.

	Added function to_dict which converts a GriddedField into a Python
	dictionary.

	* typhon/arts/tests/test_griddedfield.py:

	Added test to check the conversion into a dictionary.

2016-02-04  Oliver Lemke  <olemke@core-dump.info>

	* typhon/legacy/, doc/legacy.rst, doc/arts.rst, doc/modules.rst,
	doc/xml.rst:

	Remove legacy module.

2016-02-03  Oliver Lemke  <olemke@core-dump.info>

	* typhon/__init__.py: Increased version to 0.2.2 after upload to PyPi.

2016-02-02  Lukas Kluft <lukas.kluft@gmail.com>
